add jira logo; stub out content

--- a/modules/ROOT/pages/tools/jira.adoc
+++ b/modules/ROOT/pages/tools/jira.adoc
@@ -1,3 +1,5 @@
 = Jira
 
-todo...
+image:icons/jira.png[Jira logo]
+
+Ticket board, GitHub integration (smart commits), releases. Confluence integration.
