--- a/modules/ROOT/pages/tools/text-editors.adoc
+++ b/modules/ROOT/pages/tools/text-editors.adoc
@@ -2,12 +2,10 @@
 
 a tech writer's livelihood!
 
-== VS Code
-image:icons/vs-code.png[VS Code logo,50,50]
+== VS Code image:icons/vs-code.png[VS Code logo,50,50]
 
 todo...
 
-== Vim
-image:icons/vim.png[Vim logo,50,50]
+== Vim image:icons/vim.png[Vim logo,50,50]
 
 todo...
