--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -1,35 +1,23 @@
 = Antora
 
-image:icons/antora.png[Antora logo,50,50]
+image:icons/antora.png[Antora logo,50,50] 
 
-asciidoc...
+== Separation of concerns
+
+"For tech writers" and it shows. Antora really separates content from design from styling from build. 
+
+I appreciate its reliance on git and the ability to scale easily. 
 
 == AsciiDoc over traditional Markdown
 
 Traditional Markdown is great for documentation, but as a tech writer, I prefer for the power and flexibility of AsciiDoc.
 
-Key factors in AsciiDoc syntax (turn this into a sentence of two and add above):
+Key factors in AsciiDoc syntax (turn this list into a short paragraph and add to preceeding heading) 
 
-* same sleakness of traditional Markdown
-* *link:https://docs.asciidoctor.org/asciidoc/latest/directives/conditionals/[conditionals,window=_blank]:* route content depending on output (e.g., HTML or PDF)
+* as readable as Markdown
+* *link:https://docs.asciidoctor.org/asciidoc/latest/directives/conditionals/[conditionals,window=_blank]:* route content depending on output (for example, HTML or PDF)
 * *link:https://docs.asciidoctor.org/asciidoc/latest/directives/ifdef-ifndef/[directives,window=_blank]:* reuse content with the `::includes` directive and display specific content using logic with the `::ifdef`, `::ifndef`, and `::ifeval` directives
 
-== AsciiDoctor-pdf for print
+== Versioning
 
-When outputting single-sourced AsciiDoc content into PDF format, I prefer the link:https://www.npmjs.com/package/asciidoctor-pdf[AsciiDoctor-pdf] NPM package.
-
-=== Install AsciiDoctor-pdf
-```NPM
-npm install asciidoctor-pdf
-```
-
-=== Custom PDF styling
-Extend the default PDF theme to your liking by adjusting values in a separate YAML file.
-
-```YAML
-extends: default
-base:
-  font-color: #ff0000
-```
-
-**TIP:** refer to the link:https://github.com/asciidoctor/asciidoctor-pdf/blob/main/docs/theming-guide.adoc[AsciiDoctor PDF Theming Guide,window=_blank] for more details.
+Usually producing versioned docs isn't that tightly declared into your project's configuration. With Antora, it's explicitly managed within the playbook.
