--- a/modules/ROOT/pages/tools/hugo.adoc
+++ b/modules/ROOT/pages/tools/hugo.adoc
@@ -5,3 +5,23 @@ image:icons/hugo.png[Hugo logo,50,50]
 what I like about hugo...
 
 tranform this to be about traditional Markdown
+
+== AsciiDoctor-pdf for print
+
+When outputting single-sourced AsciiDoc content into PDF format, I prefer the link:https://www.npmjs.com/package/asciidoctor-pdf[AsciiDoctor-pdf] NPM package.
+
+=== Install AsciiDoctor-pdf
+```NPM
+npm install asciidoctor-pdf
+```
+
+=== Custom PDF styling
+Extend the default PDF theme to your liking by adjusting values in a separate YAML file.
+
+```YAML
+extends: default
+base:
+  font-color: #ff0000
+```
+
+**TIP:** refer to the link:https://github.com/asciidoctor/asciidoctor-pdf/blob/main/docs/theming-guide.adoc[AsciiDoctor PDF Theming Guide,window=_blank] for more details.
