--- a/modules/ROOT/pages/tools/jira-confluence.adoc
+++ b/modules/ROOT/pages/tools/jira-confluence.adoc
@@ -2,7 +2,7 @@
 
 Jira and Confluence are powerful tools, yet simple enough to use in a variety of ways. However you configure them, they offer time-saving potential in a unified platform. 
 
-This page discusses a few of my favorite features from each.
+This page discusses a few of my favorite features from each app.
 
 == Jira image:icons/jira.png[Jira logo,50,50] 
 
