--- a/modules/ROOT/pages/tools/hugo.adoc
+++ b/modules/ROOT/pages/tools/hugo.adoc
@@ -2,15 +2,15 @@
 
 image:icons/hugo.png[Hugo logo,50,50]
 
-what I like about hugo...simpler on the surface but with a higher ceiling than MadCap as you can tap into Go language features.
+Hugo is a powerful static site generator you can write with plain text. I feel it's simpler on the surface than Flare's messy XHTML but with a higher ceiling for configuration, since it relies upon the Go programming language.
 
-Can play around with it and learn on my own time since it's open source!
+And since it's open source, I can play around without a license and continue to experiment and learn in my free time. This is a huge advantage compared to a proprietary authoring tool like Flare.
 
 == Plain text
 
-first step into plain text static site generators.
+Hugo was my first step away from Flare and into the world of plain text static site generators. With plain text, your source code is much easier to read. This makes version control, comparing diffs, and merging branches much less complex.
 
-Version control is more straight forward. Diffs are readable. Merging is less complex.
+My time with Hugo taught me a hard lesson about AsciiDoc support, though. While Hugo supports AsciiDoc, it requires additional configuration to run somewhat smoothly.footnote:https://blog.arkey.fr/2020/04/23/tackling-hugo-integration-of-asciidoctor[]footnote:https://stiobhart.net/2020-04-18-hugo-asciidoctor[]Your selected theme must also consider AsciiDoc support, which many don't compared to typical Markdown flavors. This ultimately pushed to me try xref:antora.adoc[Antora], which natively supports the AsciiDocs syntax.
 
 == Shortcodes
 
